--- a/html/top.html
+++ b/html/top.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/application.css" />
+    <link rel="stylesheet" href="../css/shapes.css" />
     <title>Test-Rolling</title>
   </head>
   <body>
@@ -18,6 +19,7 @@
         <p>Free texts have being written.</p>
         <p>What is important is exisitence of a large object here.</p>
       </div>
+      <div id="shape1">あ</div>
     </main>
   </body>
 </html>
