--- a/html/top.html
+++ b/html/top.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/application.css" />
     <link rel="stylesheet" href="../css/shapes.css" />
+    <script defer src="../js/jquery.min.js"></script>
+    <script defer src="../js/rotation.js"></script>
     <title>Test-Rolling</title>
   </head>
   <body>
