[Add] movement of the shape.

--- a/html/top.html
+++ b/html/top.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="../css/application.css" />
     <link rel="stylesheet" href="../css/shapes.css" />
     <script defer src="../js/jquery.min.js"></script>
-    <script defer src="../js/rotation.js"></script>
+    <script defer src="../js/changeOfShapes.js"></script>
     <title>Test-Rolling</title>
   </head>
+
   <body>
     <header>
       <h1>Test-Rolling</h1>
