--- a/html/top.html
+++ b/html/top.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/application.css" />
-    <link rel="stylesheet" href="../css/shapes.css" />
-    <script defer src="../js/jquery.min.js"></script>
-    <script defer src="../js/changeOfShapes.js"></script>
-    <title>Test-Rolling</title>
-  </head>
 
-  <body>
-    <header>
-      <h1>Test-Rolling</h1>
-    </header>
-    <main>
-      <div id="description">
-        <p>This text has no mean.</p>
-        <p>Nothing is insisted in this area.</p>
-        <p>This area is a only block.</p>
-        <p>Free texts have being written.</p>
-        <p>What is important is exisitence of a large object here.</p>
-      </div>
-      <div id="shape1">あ</div>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/application.css" />
+  <link rel="stylesheet" href="../css/shapes.css" />
+  <script defer src="../js/jquery.min.js"></script>
+  <script defer src="../js/changeOfShapes.js"></script>
+  <title>Test-Rolling</title>
+</head>
+
+<body>
+  <header>
+    <h1>Test-Rolling</h1>
+  </header>
+  <main>
+    <div id="description">
+      <p>This text has no mean.</p>
+      <p>Nothing is insisted in this area.</p>
+      <p>This area is a only block.</p>
+      <p>Free texts have being written.</p>
+      <p>What is important is exisitence of a large object here.</p>
+    </div>
+    <div id="shape1">あ</div>
+    <div id="shape2">い</div>
+  </main>
+</body>
+
 </html>
